[tool.poetry]
name = "aiodevision"
version = "0.2.3"
description = "A simple asynchronous wrapper for the Idevision API."
authors = ["MrKomodoDragon <svrchn921@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrKomodoDragon/aiodevision"
repository = "https://github.com/MrKomodoDragon/aiodevision"


[tool.poetry.dependencies]
python = ">=3.5"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
